[tool.poetry]
name = "higgins"
version = "0.1.0"
description = ""
authors = ["adammarples <adammarples@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
twilio = "^7.0.0"
requests = "^2.26.0"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
